# construct-tracker

./: .autorc  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  tox.ini
.github/workflows/: build_and_install_test.yaml  build_and_install_test.yml  docs.yaml  publish.yaml  release.yaml  test.yaml
docs/: contributing.md  user_guide.md
src/: __init__.py
src/construct_tracker/: README.md  __init__.py  _version.py  cts.py  embeddings_all-MiniLM-L6-v2_docs_clause_with-interaction_24-07-30T21-23-44_part-00000.pickle  embeddings_all-MiniLM-L6-v2_docs_clause_with-interaction_24-07-30T21-24-52.pickle  embeddings_all-MiniLM-L6-v2_docs_clause_with-interaction_24-07-30T21-25-13.pickle  embeddings_all-MiniLM-L6-v2_docs_clause_with-interaction_24-07-30T21-42-31.pickle  embeddings_all-MiniLM-L6-v2_docs_clause_with-interaction_24-07-30T21-45-22.pickle  embeddings_all-MiniLM-L6-v2_docs_clause_with-interaction_24-07-30T21-46-06.pickle  genai.py  generative_ai.py  lexicon.py  lexicon_embeddings.pickle
src/construct_tracker/machine_learning/: feature_importance.py  metrics_report.py  pipelines.py
src/construct_tracker/utils/: irr.py  lemmatizer.py  logger_config.py  rename_files.py  stop_words.py  text_features.py  tokenizer.py
src/tests/: placeholder_test.py
tutorials/: construct_tracker.ipynb  construct_tracker_cts.ipynb  create_lexicon.ipynb  lbl2vec.ipynb  prompt_generative_ai_apis.ipynb  seance_lexicon.ipynb  suicide_risk_lexicon.ipynb
tutorials/ct_datasets/: insight_lexicon_counts.csv  insight_lexicon_cts_features.csv
(+54 files in other folders)
