[tool.poetry]
name = "construct-tracker"
version = "0.0.1"
description = "Track and measure constructs, concepts or categories in text documents."
authors = ["Daniel M. Low <daniel.m.low@gmail.com>"]
repository = "https://github.com/danielmlow/construct-tracker"
documentation = "https://danielmlow.github.io/construct-tracker/"
readme = "README.md"
license = "Apache"
keywords = ["lexicon", "concept", "classification", "NLP", "embeddings", "similarity", "zero shot", "construct", "category", "social sciences", "text"]
packages = [
  { include = "construct_tracker", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
black = ">=22.0.0,<23.0.0"
isort = ">=5.0.0,<6.0.0"
pytest = ">=7.0.0,<8.0.0"
mkdocs = ">=1.0.0,<2.0.0"
mkdocs-material = ">=8.0.0,<9.0.0"
mkdocstrings = ">=0.18.0,<0.19.0"
mypy = ">=0.942,<0.943"
pandas = ">=2.0.0,<3.0.0"
numpy = ">=1.0.0,<2.0.0"
seaborn = ">=0.12.0,<0.13.0"
matplotlib = ">=3.0.0,<4.0.0"
tqdm = ">=4.0.0,<5.0.0"
litellm = ">=1.0.0,<2.0.0"
dill = ">=0.3.0,<0.4.0"
spacy = "3.6.1"
deplacy = ">=2.1.0"
sentence_transformers = "2.2.2"
#scikit-learn = "1.4.2"
#jupyterlab = "4.2.2"
#ipywidgets = "8.1.3"
#lbl2vec = "1.0.2"
#transformers = "4.37.2"
#scipy = "1.11.4"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"



